--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Journey Grafix and Media | Kedar Khanal</title>
+        <title>Photography Site</title>
         <meta name = "viewport" content = "width=device-width, intial-scale=1.0">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
@@ -25,10 +25,10 @@
                 <!-- navigation menu -->
                 <nav class = "top-nav">
                     <ul>
-                        <li><a href = "index.html" class = "active">Home</a></li>
+                        <li><a href = "index.html">Home</a></li>
                         <li><a href = "gallery.html">Gallery</a></li>
                         <!-- <li><a href = "blog.html">Blog</a></li> -->
-                        <li><a href = "contact.html">Contact</a></li>
+                        <li><a href = "contact.html"  class = "active">Contact</a></li>
                     </ul>
                 </nav>
                 <!-- <span class = "search-icon">
@@ -70,64 +70,64 @@
         <!-- end of header -->
 
         <!-- main -->
-        <section class = "section-one">
+        <section class = "section-five">
             <div class = "container">
-                <div class = "sec-one-left">
-                    <!-- image here -->
-                    <!-- <div>
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos suscipit ut aliquid ab illo. Repellat nam molestias repellendus perspiciatis blanditiis.</p>
-                        <a href = "#" class = "btn">view all</a>
-                    </div> -->
+                <div class = "contact-top">
+                    <h3>CONTACT ME</h3>
+                    <p>Contact to know more.</p>
                 </div>
 
-                <div class = "sec-one-right">
-                    <div class = "work-content">
-                        <h3>AMAZING TEAM WORK WITH PROFESSIONAL PHOTOGRAPHER</h3>
-                        <p>I am a professional photographer, videographer, and editor with over a decade of experience in the industry. My studio is located in Birtamode, Jhapa, and I am proud to say that it has been providing high-quality photography and videography services since 2012. Over the years, I have built a talented team of professionals who share my passion for creating beautiful and impactful visual content. Whether you need a photographer for a special occasion or a videographer for a corporate project, my team and I are ready to bring your vision to life. Feel free to contact me at 9852682096 or 9806033996 to discuss your project, or browse my portfolio to see some of my past work.</p>
-                        <!-- <a href = "#" class = "btn">view all</a> -->
+                <div class = "contact-middle">
+                    <div>
+                        <span class = "contact-icon">
+                            <i class = "fas fa-map-signs"></i>
+                        </span>
+                        <span>Address</span>
+                        <p>Sanischare Rd, Birtamode 57204</p>
                     </div>
-                    <div class = "work-imgs">
-                        <div class = "work-img-1">
-                            <!--image here-->
-                        </div>
-                        <div class = "work-img-2">
-                            <!-- image here -->
-                        </div>
-                    </div>
-                    <h3>"Taking an image, freezing a moment, reveals how rich reality truly is."</h3>
-                </div>
-            </div>
-        </section>
 
-        <section class = "section-two">
-            <div class = "container">
-                <h2>FOLLOW ON INSTAGRAM</h2>
-                <span>@journey_studio_btm</span>
-                <div class = "insta-imgs">
                     <div>
-                        <img src = "images/insta-1.jpg">
-                        <div class = "icon-overlay flex">
-                            <i class = "fab fa-instagram"></i>
-                        </div>
+                        <span class = "contact-icon">
+                            <i class = "fas fa-phone"></i>
+                        </span>
+                        <span>Contact Number</span>
+                        <p>9852682096</p>
                     </div>
+
                     <div>
-                        <img src = "images/insta-2.jpg">
-                        <div class = "icon-overlay flex">
-                            <i class = "fab fa-instagram"></i>
-                        </div>
+                        <span class = "contact-icon">
+                            <i class = "fas fa-paper-plane"></i>
+                        </span>
+                        <span>Email Address</span>
+                        <p>jgmbtm@gmail.com</p>
                     </div>
+
                     <div>
-                        <img src = "images/insta-3.jpg">
-                        <div class = "icon-overlay flex">
-                            <i class = "fab fa-instagram"></i>
-                        </div>
+                        <span class = "contact-icon">
+                            <i class = "fas fa-globe"></i>
+                        </span>
+                        <span>Website</span>
+                        <p>www.kedarkhanal.com.np</p>
                     </div>
+                </div>
+
+                <div class = "contact-bottom">
+                    
+                    <!-- <form class = "form">
+                        <input type = "text" placeholder="Your Name">
+                        <input type = "email" placeholder="Your Email">
+                        <input type = "text" placeholder="Subject">
+                        <textarea rows = "9" placeholder="Message"></textarea>
+                        <input type = "submit" class = "btn" value = "Send Message">
+                    </form> -->
+
+                    <!-- Map -->
                     <div>
-                        <img src = "images/insta-4.jpg">
-                        <div class = "icon-overlay flex">
-                            <i class = "fab fa-instagram"></i>
-                        </div>
+                        <h3>
+                            Find Us!
+                        </h3>
+                        <br>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d549.5870724234675!2d87.9921810286819!3d26.64611145507375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e5ba60a65e2fab%3A0x3c3a3757c116a849!2sJourney%20studio%20journey%20grafix%20and%20media!5e0!3m2!1sen!2snp!4v1680202749835!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%"" height="600px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
