--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                     <!-- Map -->
                     <div>
                         <h3>
-                            Find Us!
+                            FIND US!
                         </h3>
                         <br>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d549.5870724234675!2d87.9921810286819!3d26.64611145507375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e5ba60a65e2fab%3A0x3c3a3757c116a849!2sJourney%20studio%20journey%20grafix%20and%20media!5e0!3m2!1sen!2snp!4v1680202749835!5m2!1sen!2snp" width=auto height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%"" height="600px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
