--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <div class = "sec-one-right">
                     <div class = "work-content">
-                        <h3>AMAZING TEAM WORK WITH PROFESSIONAL PHOTOGRAPHER</h3>
+                        <h3>ABOUT ME</h3>
                         <p>I am a professional photographer, videographer, and editor with over a decade of experience in the industry. My studio is located in Birtamode, Jhapa, and I am proud to say that it has been providing high-quality photography and videography services since 2012. Over the years, I have built a talented team of professionals who share my passion for creating beautiful and impactful visual content. Whether you need a photographer for a special occasion or a videographer for a corporate project, my team and I are ready to bring your vision to life. Feel free to contact me at 9852682096 or 9806033996 to discuss your project, or browse my portfolio to see some of my past work.</p>
                         <!-- <a href = "#" class = "btn">view all</a> -->
                     </div>
